--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <![endif]-->
   </head>
   <body>
+   
+  <div id="wrap">  </div>
 
   <div id="Header">
     <h1 style="color:orange">MON CV</h1>
@@ -75,7 +77,7 @@
     </div>
     
     <div class="space-vertical"></div>
-    
+
       <div id="footer" >
         <h2 class="title-footer">Regoignez-moi sur :</h2>
         <ul id="nope-point" class="list-inline">
@@ -91,5 +93,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="script/script.js"></script>
+
+
   </body>
 </html>
