suppression balise ne servant a rien

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <body>
    
   <div id="wrap">  </div>
+  <div class="space-vertical"></div>
 
   <div id="Header">
     <h1 style="color:orange">MON CV</h1>
