Animation survol + Blur svg sur <div>
support uniquement sur chrome, ne marche pas avec explorer, firefox,
safari

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <hr>
         <div class="row">
             <div class="col-md-6 col-xs-12">
-              <div id="parcour" class="centered">
+              <div id="parcour" class="centered css-filter-blur">
                 <h2 class="title">Parcours Académique</h2>
                  <ul >
                   <li class="texte-interieur">École primaire Raspail, 2005-2009</li>
@@ -88,6 +88,13 @@
         </ul>
       </div>
     </div>
+
+
+ <svg class="svg-image-blur">
+    <filter class="blur-effect-1">
+        <feGaussianBlur stdDeviation="2" />
+    </filter>
+</svg>
    
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
