Cacher <svg>..</svg> CSS car marge-bottom sous footer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <hr>
         <div class="row">
             <div class="col-md-6 col-xs-12">
-              <div id="parcour" class="centered css-filter-blur">
+              <div id="parcour" class="centered">
                 <h2 class="title">Parcours Académique</h2>
                  <ul >
                   <li class="texte-interieur">École primaire Raspail, 2005-2009</li>
@@ -67,7 +67,7 @@
 
         </div>
 
-       <div id="hobbies" class="centered2">
+       <div id="hobbies" class="centered2 css-filter-blur">
         <h2 class="title">Hobbies</h2>
          <ul class="texte-interieur-inline list-inline">
           <li>Basket-ball</li>
